syntax = "proto3";

option java_package = "com.yantrajenie.grpc";

service userService{
  //i will get this data from registration table via channel
  rpc addUser(adduser) returns (Response1);
  rpc usdetails(userdetails) returns (Response2);
  rpc usaddress(address) returns (Response3);
  rpc usupdate(update) returns  (Response4);
  rpc usdelete(deluser) returns (Response5);
  rpc usvalidate(validate) returns (Response6);
  rpc updatePass(updatepassword) returns (Response7);
}

message adduser{
  int32 userId = 1;
  string firstName = 2;
  string lastName = 3;
  string username = 4;
  string password = 5;
  string email = 6;
  string contactNo = 7;
}

message userdetails{
  int32 userId =1;
}

message address{
  int32 userId = 1;
  string flatNo = 2;
  string streetName = 3;
  string landMark = 4;
  string city = 5;
  string state = 6;
  int32  pinCode = 7;
}

message update{
  int32 userId = 1;
  string contactNo = 2;
  string flatNo = 3;
  string streetName = 4;
  string landMark = 5;
  string city = 6;
  string state = 7;
  int32  pinCode = 8;
}

message deluser{
  int32 userId = 1;
}

message validate{
  int32 userId = 1;
}

message updatepassword{
  string email = 1;
  string new_password = 2;
}

message Response1{
  string resMsg = 1;
  string resCode = 2;
}

message Response2{
  int32 userId = 1;
  string firstName = 2;
  string lastName = 3;
  string username = 4;
  string password = 5;
  string email = 6;
  string contactNo = 7;
  string flatNo = 9;
  string streetName = 10;
  string landMark = 11;
  string city = 12;
  string state = 13;
  string pinCode = 14;
  string resCode = 15;
}

message Response3{
  int32 userId = 1;
  string flatNo = 2;
  string streetName = 3;
  string landMark = 4;
  string city = 5;
  string state = 6;
  int32  pinCode = 7;
  string resMsg = 8;
  string resCode = 9;
}

message Response4{
  string resMsg = 1;
  string resCode = 2;
}

message Response5{
  string resMsg = 1;
  string resCode = 2;
}

message Response6{
  string resMsg = 1;
}

message Response7{
  string resMsg = 1;
  string resCode = 2;
}